examples/kju/positive/comments/simple_comment_outside_function.kju
/*
This is simple comment
*/
fun kju():Unit{
	
}