examples/kju/negative/comments/space_inside_comment_start_token.kju
fun kju() : Unit {
    / * I like comments * /
}
